syntax = "proto3";
//option cc_enable_arenas = true;

import "ydb/public/api/protos/ydb_issue_message.proto";
import "ydb/public/api/protos/ydb_status_codes.proto";

package Ydb.Impl;
message ReadTableResponse {
    StatusIds.StatusCode status = 1;
    repeated Ydb.Issue.IssueMessage issues = 2;
    ReadTobleResult result = 3;
};

message ReadTobleResult {
    bytes result_set = 1;
};
